--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/mailer": "6.3.*",
         "symfony/maker-bundle": "^1.49",
         "symfony/mercure-bundle": "^0.3.7",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
