--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
         "symfony/google-mailer": "6.3.*",
+        "symfony/http-client": "6.3.*",
         "symfony/http-foundation": "6.3.*",
         "symfony/mailer": "6.3.*",
         "symfony/maker-bundle": "^1.49",
