--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpstan/phpdoc-parser": "^1.22",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
